<resources>
    <string name="app_name">K234112EApp</string>
    <string name="str_welcome">Welcome to K234112E</string>
    <string name="str_say_hello">HELLO K234112E</string>
    <string name="str_clickme_to_say_hello">Say Hello</string>
    <string name="str_login_system">Login System</string>
    <string name="str_username">Username:</string>
    <string name="str_hint_username">Enter your User name</string>
    <string name="str_password">Password:</string>
    <string name="str_hint_password">Enter your Password</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_login_success">Login successful!!!!!</string>
    <string name="str_login_failed">Login failed!!!!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
</resources>